Update pks set in foundset when pk is updated, both for client that updates the record and related foundset in other client Case: SVY-976